# cliNews

./: .env  Cargo.toml
src/: main.rs
