[package]
name = "newsTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0.85"
ureq = "2.5.0"
serde = {version = "1.0.144", features=["derive"]}
colour = "0.6.0"
